// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuList English returns array of menu list objects 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with absolute URLs 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/https://www.healthcare.gov",
      "label": "header.español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/https://www.healthcare.gov",
      "label": "header.español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with custom locale switch link 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with subpath 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/login?check_de=1",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with absolute URLs 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/https://www.healthcare.gov",
      "label": "header.english",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/https://www.healthcare.gov",
      "label": "header.english",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with custom locale switch link 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://localhelp.healthcare.gov/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "https://localhelp.healthcare.gov/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english",
    },
    Object {
      "href": "https://localhelp.healthcare.gov/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english",
    },
    Object {
      "href": "https://localhelp.healthcare.gov/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with subpath 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english",
    },
    Object {
      "href": "/login?check_de=1",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList leaves out locale links if hideLanguageSwitch true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList leaves out login link if hideLoginLink true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
  ],
}
`;

exports[`MenuList leaves out logout link if hideLogoutLink true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"lng\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;

exports[`MenuList leaves out the myProfile and myApplicationsAndCoverage when customLinksPassedIn is true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"lng\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login",
    },
  ],
}
`;
